--- a/contrib/packaging/requirements-windows.txt.in
+++ b/contrib/packaging/requirements-windows.txt.in
@@ -2,6 +2,10 @@ docutils
 # Pinned to an old version because 0.20 drops Python 3 compatibility.
 dulwich < 0.20 ; python_version <= '2.7'
 dulwich ; python_version >= '3'
+
+# Needed by the release note tooling
+fuzzywuzzy
+
 keyring
 pygit2 ; python_version >= '3'
 pygments
