windows: add pytest-vcr to the dependencies
This will lead to pyoxidizer including it in its binary.

This fix test-phabricator.t

Differential Revision: https://phab.mercurial-scm.org/D11301

--- a/contrib/packaging/requirements-windows.txt.in
+++ b/contrib/packaging/requirements-windows.txt.in
@@ -9,6 +9,10 @@ fuzzywuzzy
 keyring
 pygit2 ; python_version >= '3'
 pygments
+
+# Needed by the phabricator tests
+pytest-vcr
+
 # Need to list explicitly so dependency gets pulled in when
 # not running on Windows.
 pywin32-ctypes
