hgignore: ignore .testtimes in more location
See the inline comment.

Differential Revision: https://phab.mercurial-scm.org/D12393

--- a/.hgignore
+++ b/.hgignore
@@ -22,6 +22,8 @@ syntax: glob
 tests/artifacts/cache/big-file-churn.hg
 tests/.coverage*
 tests/.testtimes*
+# the file is written in the CWD when run-tests is run.
+.testtimes
 tests/.hypothesis
 tests/hypothesis-generated
 tests/annotated
