ci: use the `v1.0` flavor of the docker images in the CI
This new versioning will help us to maintain backward compatibility in the
docker image. This will be useful to deal with mismatch between default/stable
in version and the re-run CI on older changesets in the future.

Once this changeset land on stable, we will have to merge it in default. Then
we can start make backward incompatible changes in a new image version.

Differential Revision: https://phab.mercurial-scm.org/D12388

--- a/contrib/heptapod-ci.yml
+++ b/contrib/heptapod-ci.yml
@@ -7,7 +7,7 @@ image: registry.heptapod.net/mercurial/ci-images/mercurial-core:$HG_CI_IMAGE_TAG
 variables:
     PYTHON: python
     TEST_HGMODULEPOLICY: "allow"
-    HG_CI_IMAGE_TAG: "latest"
+    HG_CI_IMAGE_TAG: "v1.0"
     TEST_HGTESTS_ALLOW_NETIO: "0"
 
 .all_template: &all
