ci: have rust-cargo-test inherit from all
This help changing configuration for everything at the same time.

This was initially the case before being dropped by mistake in 0ddd5e1f5f67.

--- a/contrib/heptapod-ci.yml
+++ b/contrib/heptapod-ci.yml
@@ -37,6 +37,7 @@ checks:
         PYTHON: python3
 
 rust-cargo-test:
+    <<: *all
     stage: tests
     script:
         - echo "python used, $PYTHON"
